--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ langchain-openai==1.1.7
 langchain-core==1.2.7
 requests==2.32.5
 httpx==0.28.1
-numpy==2.4.1
+numpy>=1.26.4,<2.0.0
 python-dotenv==1.2.1
 pytest==9.0.2
+librosa>=0.10.2
+scipy>=1.11.0
